Fixed the spacing between nav uls at the two larger screen sizes. Put the header picture in the header (it had been in the aside)

--- a/css/main.css
+++ b/css/main.css
@@ -180,6 +180,7 @@ footer {
 
 header {
   padding: 15px 0;
+
 }
 
 header .content-wrapper {
@@ -221,7 +222,8 @@ header nav ul {
   width: 100%;
   display: flex;
   justify-content: space-around;
-
+  padding: 0;
+  padding-inline-start: 0;
 }
 
 header nav ul li {
@@ -267,7 +269,7 @@ footer .copyright {
 /* Homepage */
 
 .hero-area {
-  background: url(../img/unplugged-retreat.jpg);
+  background: url('../img/girl-on-bridge.jpg');
   background-size: cover;
   background-position: center;
   min-height: 500px;
@@ -285,7 +287,6 @@ footer .copyright {
 /* Aside */
 
 aside {
-  background: url('../img/girl-on-bridge.jpg') center no-repeat #333;
   background-size: cover;
   background-color: #527158;
   display: flex;
@@ -574,7 +575,7 @@ header figure {
 }
 
 header nav {
-    width: 20%;
+    width: 30%;
 }
 
 header nav ul {
@@ -618,10 +619,9 @@ aside .content-wrapper .form {
 
 .features article {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   flex-flow: column wrap;
-  flex-basis: 50%;
 
 }
 
@@ -631,7 +631,7 @@ aside .content-wrapper .form {
 
 /* Reviews */
 .reviews h2 {
-  width: 85%;
+  width: 90%;
 }
 
 .reviews article {
@@ -639,8 +639,12 @@ aside .content-wrapper .form {
   justify-content: space-between;
 }
 
+.reviews figure img {
+  width: 80%;
+}
+
 .reviews article div {
-  width: 49%;
+  width: 100%;
 }
 
 .reviews h3 {
@@ -741,6 +745,10 @@ footer .copyright {
 
 header figure {
     width: 25%;
+}
+
+header nav {
+  width: 20%;
 }
 
 ul,
